--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,20 +5,23 @@ on:
     - cron: "0 */24 * * *" # Runs every 24 hours (at minute 0, every 24th hour)
   workflow_dispatch: # Allow manual trigger
 
+permissions: # <--- ADD THIS BLOCK HERE
+  contents: write # <--- This grants write permission to push changes
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: Platane/snk@v3 # Use the snake action
+      - uses: Platane/snk@v3
         id: snake-gif
         with:
-          github_user_name: NingenUman # <<-- REPLACE with your GitHub username!
+          github_user_name: NingenUman # Your username
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Required for the action to read your contributions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This is correct
 
       - name: Commit snake SVG
         run: |
