--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -29,4 +29,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add dist/github-contribution-grid-snake.svg dist/github-contribution-grid-snake-dark.svg
           git commit -m "Generate GitHub snake" || echo "No changes to commit"
-          git push origin HEAD:output
+          git push -f origin HEAD:output
